--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -92,6 +92,9 @@
                         <a class="nav-link" href="{% url 'out_of_stock_products' %}">Out Of Stock</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'top_products' %}">Top Products</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'journal_list' %}">Journal Note Book</a>
                     </li>
                     <li class="nav-item">
