--- a/accounts/templates/function_orders_list.html
+++ b/accounts/templates/function_orders_list.html
@@ -49,7 +49,7 @@
                 </tr>
             </thead>
             <tbody id="ordersTableBody">
-                {% for order in orders %}
+                {% for order in orders_list %}
                     <tr class="order-item">
                         <!-- <td>{{ order.id }}</td> -->
                         <td>{{ forloop.counter }}</td>
