--- a/accounts/templates/function_orders_detail.html
+++ b/accounts/templates/function_orders_detail.html
@@ -214,7 +214,7 @@
         triggerPrint();
     };
     document.addEventListener('keydown',function (event){
-        if(event.key ==='p'){
+        if(event.key ==='.'){
             triggerPrint();
         }
     });
