--- a/accounts/templates/function_orders_ordersitems.html
+++ b/accounts/templates/function_orders_ordersitems.html
@@ -210,7 +210,7 @@
         triggerPrint();
     };
     document.addEventListener('keydown',function (event){
-        if(event.key ==='p'){
+        if(event.key ==='.'){
             triggerPrint();
         }
     });
