--- a/accounts/templates/orders_detail.html
+++ b/accounts/templates/orders_detail.html
@@ -237,7 +237,7 @@
 
         // Event listener for keyboard input (e.g., pressing "Enter" after typing "print")
         document.addEventListener('keydown', function(event) {
-            if (event.key === 'p') {
+            if (event.key === '.') {
                 triggerPrint();
             }
         });
