twelth time changes

--- a/accounts/templates/orders_ordersitems.html
+++ b/accounts/templates/orders_ordersitems.html
@@ -216,7 +216,7 @@
 
         // Event listener for keyboard input (e.g., pressing "Enter" after typing "print")
         document.addEventListener('keydown', function(event) {
-            if (event.key === '.') {
+            if (event.key === '*') {
                 triggerPrint();
             }
         });
